--- a/medsafe-frontend/src/app/components/referti-upload/referti-upload.component.html
+++ b/medsafe-frontend/src/app/components/referti-upload/referti-upload.component.html
@@ -33,9 +33,9 @@
           <span class="quick-icon">🔍</span>
           <span>Cerca</span>
         </button>
-        <button class="quick-btn" type="button" title="Torna alla dashboard" [routerLink]="['/dashboard']">
-          <span class="quick-icon">🏠</span>
-          <span>Dashboard</span>
+        <button class="quick-btn" type="button" title="Vai al profilo" [routerLink]="['/profilo']">
+          <span class="quick-icon">🩺</span>
+          <span>Profilo</span>
         </button>
       </div>
     </div>
